    number ofrunning processes in a group hits zero.  Previously, 
    the sockets were kept open unless a group-level stop command 
    was issued.

  - Better error message when HTTP server cannot reverse-resolve a
    hostname to an IP address.  Previous behavior: show a socket
    error.  Current behavior: spit out a suggestion to stdout.

3.0a9 (2010-08-13)

  - Use rich comparison methods rather than __cmp__ to sort process
    configs and process group configs to better straddle Python
    versions.  (thanks to Jonathan Riboux for identifying the problem
    and supplying an initial patch).

  - Fixed test_supervisorctl.test_maintail_dashf test for Python 2.7.
    (thanks to Jonathan Riboux for identifying the problem and
    supplying an initial patch).

  - Fixed the way that supervisor.datatypes.url computes a "good" URL
    for compatibility with Python 2.7 and Python >= 2.6.5.  URLs with
    bogus "schemes://" will now be accepted as a version-straddling
    compromise (before they were rejected before supervisor would
    start).  (thanks to Jonathan Riboux for identifying the problem
    and supplying an initial patch).

  - Add a ``-v`` / ``--version`` option to supervisord: Print the
    supervisord version number out to stdout and exit.  (Roger Hoover)

  - Import iterparse from xml.etree when available (eg: Python 2.6).  Patch
    by Sidnei da Silva.

  - Fixed the url to the supervisor-users mailing list.  Patch by
    Sidnei da Silva

  - When parsing "environment=" in the config file, changes introduced in
    3.0a8 prevented Supervisor from parsing some characters commonly
    found in paths unless quoting was used as in this example:
    
      environment=HOME='/home/auser'
    
    Supervisor once again allows the above line to be written as:
    
      environment=HOME=/home/auser

    Alphanumeric characters, "_", "/", ".", "+", "-", "(", ")", and ":" can all 
    be used as a value without quoting. If any other characters are needed in 